# CleanText-Studio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  README.zh-TW.md  README_EN.md  SECURITY.md  THIRD_PARTY_LICENSES.md  cleantext-studio.spec  installer.iss  pyproject.toml  release-notes.md
.github/: PULL_REQUEST_TEMPLATE.md  labels.md
docs/: AI_PRIVACY.md  API_CONFIGURATION.md  ARCHITECTURE.md  BUILD_WINDOWS.md  DEVELOPMENT.md  MATH_RENDERING_AUDIT-v1.5.2.md  PRIVACY.md  PROVIDER_DEVELOPMENT.md  README_CONTENT_SPEC.md  README_TRANSLATION_STATUS.md  RELEASE.md  RELEASE_TEMPLATE.md  REPOSITORY_CLEANUP_REPORT-v1.4.2.md  SCREENSHOT_AUDIT-OPEN-SOURCE.md  SCREENSHOT_AUDIT-v1.5.0.md  SCREENSHOT_AUDIT-v1.5.1.md  SHOWCASE_AUDIT-v1.5.2.md  THEME_VISUAL_AUDIT-v1.5.2.md  TRANSLATION_GLOSSARY.md  TRANSLATION_GUIDE.md  TRANSLATION_STATUS.md  USER_GUIDE.md  index.html  showcase.md
launch/: github-launch.md
scripts/: audit_docx_math.py  audit_user_visible_strings.py  audit_widget_backgrounds.py  build_windows.ps1  capture_about_screenshots.py  capture_background_fix.py  capture_readme_screenshots.py  capture_screenshots.py  capture_v142_screenshots.py  capture_v150_screenshots.py  check_readme_quality.py  check_screenshot_quality.py  check_showcase_assets.py  check_translations.py  check_ui_language_consistency.py  complete_translations.py  generate_math_verification.py  generate_open_source_assets.py  (+3 more)
(+191 files in other folders)
